--- a/src/data/levels/05a_CPU/03_Flags/chat/en.yml
+++ b/src/data/levels/05a_CPU/03_Flags/chat/en.yml
@@ -28,7 +28,7 @@ what:
     set((m) => m.$exercise = true);
   messages:
   - 📚  create a `FlagsRegister` class with 6 boolean properties (called `c`, `z`, `i`, `d`, `v` and `n`)
-  - initialize them with `false`
+  - initialize them with ```javascript false```
   - |-
     📚  then implement, following the previous table:
     **getValue()**:
@@ -36,7 +36,7 @@ what:
     **setValue(value)**:
       **->** should assign all the flags from the received 8-bit number
   - i.e. with `i` and `v` set, ```javascript getValue()``` should return ```javascript 0b01100100```
-  - and ```javascript setValue(0b00000010)``` should set all booleans to `false`, except for `z`
+  - and ```javascript setValue(0b00000010)``` should set all booleans to ```javascript false```, except for `z`
   responses:
   - (*) I need a bit of help 📐 [bits]
   - ✅  I have the class [nowwhat]
