--- a/src/data/levels/05a_CPU/06_Little Endian/chat/en.yml
+++ b/src/data/levels/05a_CPU/06_Little Endian/chat/en.yml
@@ -4,7 +4,7 @@ main:
   - sometimes, values are represented using more than 1 byte
   - e.g. when a CPU instruction has a 16-bit address as an argument
   - or when using the `RTS` instruction and the CPU needs to restore [PC] from the stack
-  - in these cases, the <Little Endian> convention is used 🔌
+  - in these cases, the Little Endian convention is used 🔌
   - "that means: the least significant byte (\"low byte\") is stored first, then the most significant byte (\"high byte\")"
   - <{little_endian.png}>
   - |-
@@ -12,7 +12,7 @@ main:
     **read16(address)**:
       **->** returns a 16-bit number
         - the low byte is obtained by reading `address` from memory
-        - the high byte is obtained by reading `address+1`
+        - the high byte is obtained by reading ```javascript address+1```
   - |-
     📚  and these two methods in `Stack`:
     **push16(bigNumber)**:
