--- a/src/data/levels/05a_CPU/06_Little Endian/chat/es.yml
+++ b/src/data/levels/05a_CPU/06_Little Endian/chat/es.yml
@@ -4,7 +4,7 @@ main:
   - a veces, los valores se representan usando más de 1 byte
   - p. ej. cuando una instrucción de CPU tiene una dirección de 16 bits como argumento
   - o al usar la instrucción `RTS` y la CPU tiene que restaurar [PC] desde la pila
-  - en estos casos, se usa la convención <Little Endian> 🔌
+  - en estos casos, se usa la convención Little Endian 🔌
   - "eso quiere decir: el byte menos significativo (\"low byte\") se guarda primero, luego el más significativo (\"high byte\")"
   - <{little_endian.png}>
   - |-
@@ -12,7 +12,7 @@ main:
     **read16(address)**:
       **->** retorna un número de 16 bits
         - el low byte se obtiene leyendo `address` de la memoria
-        - el high byte se obtiene leyendo `address+1`
+        - el high byte se obtiene leyendo ```javascript address+1```
   - |-
     📚  y estos dos métodos en `Stack`:
     **push16(bigNumber)**:
