--- a/src/data/levels/05a_CPU/15_Execute/chat/en.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/en.yml
@@ -39,29 +39,29 @@ rightway:
       **->** reads a byte from the memory address that [PC] points at
         (let's call this `opcode`)
       **->** finds the operation related with that opcode:
-        `this.operations[opcode]`
+        ```javascript this.operations[opcode]```
         (let's call this `operation`)
       **->** if `operation` doesn't exist, throws an "Invalid opcode." error
       **->** increments [PC]
       **->** returns `operation`
     **_fetchInput(operation)**:
-      **->** reads 0, 1 (using `read(...)`) or 2 bytes (using `read16(...)`) from the memory address that [PC] points at, depending on `operation.addressingMode.inputSize`
+      **->** reads 0, 1 (using `read(...)`) or 2 bytes (using `read16(...)`) from the memory address that [PC] points at, depending on ```javascript operation.addressingMode.inputSize```
         (let's call this `input`)
       **->** increments [PC] (0, 1, or 2 times) to skip those bytes
-      **->** returns `input` (or `null`)
+      **->** returns `input` (or ```javascript null```)
     **_fetchArgument(operation, input)**:
       **->** returns the result of processing `input` with the addressing mode
-        - if `operation.instruction.argument === "value"`, it should be:
-            `operation.addressingMode.getValue(this, input, operation.hasPageCrossPenalty)`
+        - if ```javascript operation.instruction.argument === "value"```, it should be:
+            ```javascript operation.addressingMode.getValue(this, input, operation.hasPageCrossPenalty)```
         - else:
-            `operation.addressingMode.getAddress(this, input, operation.hasPageCrossPenalty)`
+            ```javascript operation.addressingMode.getAddress(this, input, operation.hasPageCrossPenalty)```
     **_addCycles(operation)**:
       **->** calculates how many cycles the `operation` took:
-        `operation.cycles + this.extraCycles`
+        ```javascript operation.cycles + this.extraCycles```
         (let's call this `cycles`)
       **->** updates the cycle counters:
-        `this.cycle += cycles;`
-        `this.extraCycles = 0;`
+        ```javascript this.cycle += cycles;```
+        ```javascript this.extraCycles = 0;```
       **->** returns `cycles`
   responses:
   - what about the `step()` method you mentioned? [step]
