--- a/src/data/levels/05a_CPU/15_Execute/chat/es.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/es.yml
@@ -39,29 +39,29 @@ rightway:
       **->** lee un byte de la dirección de memoria apuntada por [PC]
         (llamemos a esto `opcode`)
       **->** encuentra la operación relacionada con ese opcode:
-        `this.operations[opcode]`
+        ```javascript this.operations[opcode]```
         (llamemos a esto `operation`)
       **->** si `operation` no existe, tira un error "Invalid opcode."
       **->** incrementa [PC]
       **->** retorna `operation`
     **_fetchInput(operation)**:
-      **->** lee 0, 1 (usando `read(...)`) o 2 bytes (usando `read16(...)`) de la dirección de memoria apuntada por [PC], dependiendo de `operation.addressingMode.inputSize`
+      **->** lee 0, 1 (usando `read(...)`) o 2 bytes (usando `read16(...)`) de la dirección de memoria apuntada por [PC], dependiendo de ```javascript operation.addressingMode.inputSize```
         (llamemos a esto `input`)
       **->** incrementa [PC] (0, 1, o 2 veces) para saltear esos bytes
-      **->** retorna `input` (o `null`)
+      **->** retorna `input` (o ```javascript null```)
     **_fetchArgument(operation, input)**:
       **->** retorna el resultado de procesar `input` con el modo de direccionamiento
-        - si `operation.instruction.argument === "value"`, debería ser:
-            `operation.addressingMode.getValue(this, input, operation.hasPageCrossPenalty)`
+        - si ```javascript operation.instruction.argument === "value"```, debería ser:
+            ```javascript operation.addressingMode.getValue(this, input, operation.hasPageCrossPenalty)```
         - si no:
-            `operation.addressingMode.getAddress(this, input, operation.hasPageCrossPenalty)`
+            ```javascript operation.addressingMode.getAddress(this, input, operation.hasPageCrossPenalty)```
     **_addCycles(operation)**:
       **->** calcula cuántos ciclos tomó la `operation`:
-        `operation.cycles + this.extraCycles`
+        ```javascript operation.cycles + this.extraCycles```
         (llamemos a esto `cycles`)
       **->** actualiza los contadores de ciclos:
-        `this.cycle += cycles;`
-        `this.extraCycles = 0;`
+        ```javascript this.cycle += cycles;```
+        ```javascript this.extraCycles = 0;```
       **->** retorna `cycles`
   responses:
   - ¿y el método `step()` que mencionaste? [step]
