--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
@@ -66,7 +66,7 @@ draw:
     📚  implement this method:
     **plot(x, y, color)**:
       **->** assigns the `color` to the pixel ~(x,y)~ in the `frameBuffer` array
-        (the index for ~(x,y)~ should be `y * 256 + x`)
+        (the index for ~(x,y)~ should be ```javascript y * 256 + x```)
   - 📚  then, modify your `step` method so it receives an `onFrame` callback as parameter
   - |-
     📚  and every time you detect a new frame (right after ```javascript this.frame++;```), call it with the frame buffer, like this:
