--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
@@ -66,7 +66,7 @@ draw:
     📚  implementa este método:
     **plot(x, y, color)**:
       **->** asigna el `color` al píxel ~(x,y)~ en el array `frameBuffer`
-        (el índice para ~(x,y)~ debería ser `y * 256 + x`)
+        (el índice para ~(x,y)~ debería ser ```javascript y * 256 + x```)
   - 📚  luego, modifica tu método `step` para que reciba un callback `onFrame` como parámetro
   - |-
     📚  y cada vez que detectes un nuevo frame (justo después de ```javascript this.frame++;```), llámalo con el frame buffer, así:
