--- a/src/data/levels/05b_PPU/06_Video Registers/chat/es.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/es.yml
@@ -39,14 +39,14 @@ useit:
   messages:
   - abre 📄  ~/tmpl/ppu/VideoRegisters.js~ y úsalo como plantilla
   - los registros 🎛️  `PPUCtrl` y 📊  `PPUStatus` ya están implementados
-  - observa cómo llaman a `addField` por cada parámetro definido en la columna ~Bits~ del archivo de documentación, indicando el bit de inicio y su tamaño (cuando son mayores a 1 bit)
-  - "esto crea <propiedades mágicas>: después de la llamada a `onWrite(...)`, la PPU podrá acceder a sus valores (p.ej. `ppuCtrl.spriteSize`)"
-  - en el caso de 📊  `PPUStatus`, usa `addWritableField` porque la PPU necesita escribirlos (p. ej. `ppuStatus.isInVBlankInterval = 1`) para que la CPU pueda leer los valores actualizados mediante `onRead()`
+  - observa cómo llaman a `addField(...)` por cada parámetro definido en la columna ~Bits~ del archivo de documentación, indicando el bit de inicio y su tamaño (cuando son mayores a 1 bit)
+  - "esto crea <propiedades mágicas>: después de la llamada a `onWrite(...)`, la PPU podrá acceder a sus valores (p.ej. ```javascript ppuCtrl.spriteSize```)"
+  - en el caso de 📊  `PPUStatus`, usa `addWritableField(...)` porque la PPU necesita escribirlos (p. ej. ```javascript ppuStatus.isInVBlankInterval = 1```) para que la CPU pueda leer los valores actualizados mediante `onRead()`
   - 📚  crea una clase `VideoRegisters`, utilizando esa plantilla
   - |-
     📚  agrega una propiedad `registers` a `PPU`, asignada a:
          ```javascript new VideoRegisters(this)```
   - "📚  finalmente, mapéalos en `CPUMemory` (regiones $2000-$2007 y $4014):"
-  - las <lecturas> deberían retornar `this.ppu.registers.read(address)`
-  - las <escrituras> deberían llamar a `this.ppu.registers.write(address, value)` y retornar
+  - las <lecturas> deberían retornar ```javascript this.ppu.registers.read(address)```
+  - las <escrituras> deberían llamar a ```javascript this.ppu.registers.write(address, value)``` y retornar
   responses: []
